# webScraping

./: .gitignore  main.py  pyproject.toml  scrap.py
static/css/: main.css  style.css
templates/: base.html  index.html  results.html
